--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,8 +28,8 @@ python = ">=3.9,<3.13"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.6.0"
-black = "^23.9.1"
 pylint = "^3.0.1"
+ruff = "^0.1.5"
 
 [tool.poetry.scripts]
 scrap = "scrapscript.cli.cli:main"
@@ -38,17 +38,6 @@ scrap = "scrapscript.cli.cli:main"
 build-backend = "poetry.core.masonry.api"
 requires = ["poetry-core>=1.0.0"]
 
-[tool.black]
-line-length = 120
-
-[tool.flake8]
-max-line-length = 120
-
-[tool.isort]
-line_length = 120
-profile = "black"
-src_paths = "*"
-
 [tool.mypy]
 disallow_incomplete_defs = true
 disallow_untyped_calls = true
@@ -56,7 +45,7 @@ disallow_untyped_defs = true
 ignore_missing_imports = true
 
 [tool.pylint.basic]
-good-names = ["f", "i"]
+good-names = ["i", "x"]
 notes = ["FIXME"]
 
 [tool.pylint.format]
@@ -71,3 +60,9 @@ disable = [
 
 [tool.pylint.reports]
 output-format = "colorized"
+
+[tool.ruff]
+line-length = 120
+
+[tool.ruff.lint]
+ignore = ["E741"]
