Remove isort and black from vscode config

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,15 +3,13 @@
   "[markdown]": { "editor.defaultFormatter": "esbenp.prettier-vscode" },
   "[python]": { "editor.defaultFormatter": "charliermarsh.ruff" },
   "[toml]": { "editor.defaultFormatter": "tamasfe.even-better-toml" },
+  "cSpell.words": ["Binop", "blankspace", "Prec"],
   "editor.codeActionsOnSave": { "source.organizeImports": true },
-  "black-formatter.args": ["--config", "pyproject.toml"],
-  "cSpell.words": ["Binop", "blankspace", "Prec", "randn"],
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.detectIndentation": true,
   "editor.formatOnSave": true,
   "editor.insertSpaces": true,
   "editor.rulers": [120],
-  "isort.args": ["--settings-file", "pyproject.toml"],
   "mypy-type-checker.args": ["--config-file", "pyproject.toml"],
   "prettier.printWidth": 120,
   "pylint.path": ["pylint"],
