--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,11 +24,12 @@ include = "scrapscript"
 
 [tool.poetry.dependencies]
 click = "^8.1.7"
-python = ">=3.9,<3.13"
+python = ">=3.9"
 
 [tool.poetry.group.dev.dependencies]
-mypy = "^1.6.0"
+mypy = "^1.7.0"
 pylint = "^3.0.1"
+pytest = "^7.4.0"
 ruff = "^0.1.5"
 
 [tool.poetry.scripts]
