--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,8 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v3
+    - name: Get deadsnakes repo
+      run: sudo add-apt-repository ppa:deadsnakes/ppa
     - name: Install Python
       run: sudo apt install -y ${{matrix.PYTHON}}
     - name: Run tests
