--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,8 @@ jobs:
     - uses: actions/checkout@v3
     - name: Get deadsnakes repo
       run: sudo add-apt-repository --yes ppa:deadsnakes/ppa
+    - name: Update local package lists
+      run: sudo apt update
     - name: Install Python
       run: sudo apt install --yes ${{matrix.PYTHON}}
     - name: Run tests
