--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,4 +54,4 @@ jobs:
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
     - name: Try a little hello world
-      run: docker run ${{ env.IMAGE_NAME }} apply "1 + 2"
+      run: docker run ${{ steps.meta.outputs.tags }} apply "1 + 2"
