Try building image in CI (#19)
* Try building image in CI

* wip

* Add quick check post-build

* Don't be interactive

* Use tags from meta step to identify image

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,12 @@ on:
   push:
     branches: [ trunk ]
   pull_request:
-    branches: [ trunk ]
+    branches: [ trunk, mb-monadic ]
+
+
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
 
 
 env:
