--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,21 @@ env:
 
 
 jobs:
+  run_lint:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: Get deadsnakes repo
+      run: sudo add-apt-repository --yes ppa:deadsnakes/ppa
+    - name: Update local package lists
+      run: sudo apt update
+    - name: Install Python
+      run: sudo apt install --yes python3.10
+    - run: python3.10 -m pip install --user pipx
+    - run: python3.10 -m pipx install poetry
+    - run: poetry install --with=dev
+    - run: poetry run ruff check scrapscript.py
+    - run: poetry run mypy --strict scrapscript.py
   run_unit_tests:
     strategy:
       matrix:
