--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ version = "0.1.0"
 
 [tool.poetry.dependencies]
 python = ">=3.8"
+pygit2 = "^1.13.3"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.7.0"
