--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -4,6 +4,7 @@ on:
     types: [opened, reopened, synchronize, closed]
 
 env:
+  FLY_APP: scrapscript-pr-${{ github.event.number }}
   FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
   FLY_REGION: ewr
   FLY_ORG: personal
