--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -5,7 +5,6 @@ on:
 
 env:
   FLY_APP: scrapscript-pr-${{ github.event.number }}
-  FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
   FLY_REGION: ewr
   FLY_ORG: personal
 
@@ -29,3 +28,5 @@ jobs:
       - name: Deploy
         id: deploy
         uses: superfly/fly-pr-review-apps@1.2.0
+        env:
+          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
