--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -29,4 +29,4 @@ jobs:
         id: deploy
         uses: superfly/fly-pr-review-apps@1.2.0
         env:
-          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+          FLY_API_TOKEN: ${{ secrets.FLY_API_DEPLOY_TOKEN }}
