--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -3,11 +3,6 @@ on:
   pull_request:
     types: [opened, reopened, synchronize, closed]
 
-env:
-  FLY_APP: scrapscript-pr-${{ github.event.number }}
-  FLY_REGION: ewr
-  FLY_ORG: personal
-
 jobs:
   staging_app:
     runs-on: ubuntu-latest
@@ -28,5 +23,9 @@ jobs:
       - name: Deploy
         id: deploy
         uses: superfly/fly-pr-review-apps@1.2.0
+        with:
+          name: scrapscript-pr-${{ github.event.number }}
+          region: ewr
+          org: personal
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_DEPLOY_TOKEN }}
