--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,8 @@ jobs:
         run: sudo add-apt-repository --yes ppa:deadsnakes/ppa
       - name: Update local package lists
         run: sudo apt update
+      - name: Install system dependencies
+        run: sudo apt install --yes libffi-dev libssl-dev
       - name: Install Python
         run: sudo apt install --yes ${{matrix.PYTHON}}
       - name: Run tests
