--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,8 @@ jobs:
         run: sudo apt install --yes libffi-dev libssl-dev
       - name: Install Python
         run: sudo apt install --yes ${{matrix.PYTHON}}
+      - name: Install Python packages
+        run: python3 -m pip install cffi cryptography
       - name: Run tests
         run: ${{matrix.PYTHON}} scrapscript.py test
   build_docker_image:
