--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,8 @@ jobs:
       - name: Install Python
         run: sudo apt install --yes ${{matrix.PYTHON}}
       - name: Install Python packages
-        run: python3 -m pip install cffi cryptography
+        run:
+          python3 -m pip install --upgrade --force-reinstall cffi cryptography
       - name: Run tests
         run: ${{matrix.PYTHON}} scrapscript.py test
   build_docker_image:
