--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,7 +70,7 @@ jobs:
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
     - name: Try a little hello world
-      run: docker run ${{ steps.meta.outputs.tags }} apply "1 + 2"
+      run: docker run ${{ steps.meta.outputs.tags }} eval "1 + 2"
   deploy:
     runs-on: ubuntu-latest
     if: |
