--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -22,10 +22,10 @@ jobs:
 
       - name: Deploy
         id: deploy
-        uses: superfly/fly-pr-review-apps@1.2.0
+        uses: superfly/fly-pr-review-apps@1.2.1
         with:
           name: scrapscript-pr-${{ github.event.number }}
-          regions: ewr
+          region: ewr
           org: personal
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_DEPLOY_TOKEN }}
