--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,8 +42,10 @@ jobs:
       run: sudo apt update
     - name: Install Python
       run: sudo apt install --yes ${{matrix.PYTHON}}
-    - name: Run tests
+    - name: Run interpreter tests
       run: ${{matrix.PYTHON}} scrapscript.py test
+    - name: Run compiler tests
+      run: ${{matrix.PYTHON}} compiler_tests.py
   build_docker_image:
     runs-on: ubuntu-latest
     permissions:
