--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
   run_lint:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: Get deadsnakes repo
       run: sudo add-apt-repository --yes ppa:deadsnakes/ppa
     - name: Update local package lists
@@ -33,9 +33,9 @@ jobs:
     strategy:
       matrix:
         PYTHON: [python3.8, python3.9, python3.10, python3.11, python3.12, python3.13]
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: Get deadsnakes repo
       run: sudo add-apt-repository --yes ppa:deadsnakes/ppa
     - name: Update local package lists
@@ -52,7 +52,7 @@ jobs:
       contents: read
       packages: write
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: Log in to the Container registry
       uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
       with:
@@ -78,7 +78,7 @@ jobs:
       github.ref == format('refs/heads/{0}', github.event.repository.default_branch)
     needs: [run_lint, run_unit_tests]
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: superfly/flyctl-actions/setup-flyctl@master
       - run: flyctl deploy --remote-only
         env:
