Add deploy command

--- a/examples/11_platforms/web/Dockerfile
+++ b/examples/11_platforms/web/Dockerfile
@@ -18,3 +18,6 @@ FROM scratch as server
 COPY --from=build /cosmo/a.out .
 EXPOSE 8000
 ENTRYPOINT ["./a.out"]
+
+# Deploy from the repo root with
+# fly deploy --dockerfile examples/11_platforms/web/Dockerfile --local-only --config examples/11_platforms/web/fly.toml
