--- a/examples/11_platforms/web/Dockerfile
+++ b/examples/11_platforms/web/Dockerfile
@@ -20,4 +20,4 @@ EXPOSE 8000
 ENTRYPOINT ["./a.out"]
 
 # Deploy from the repo root with
-# fly deploy --dockerfile examples/11_platforms/web/Dockerfile --local-only --config examples/11_platforms/web/fly.toml
+# fly deploy --dockerfile examples/11_platforms/web/Dockerfile --config examples/11_platforms/web/fly.toml
