--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,6 +46,8 @@ jobs:
       run: ${{matrix.PYTHON}} scrapscript.py test
     - name: Run compiler tests
       run: ${{matrix.PYTHON}} compiler_tests.py
+    - name: Run compiler tests with static heap
+      run: CFLAGS="-DSTATIC_HEAP" ${{matrix.PYTHON}} compiler_tests.py
   build_docker_image:
     runs-on: ubuntu-latest
     permissions:
