Bring back the ability to build Scrapscript in Docker

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,6 +73,7 @@ jobs:
         push: true
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
+        target: main
   deploy:
     runs-on: ubuntu-latest
     if: |
