--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,7 @@ jobs:
     strategy:
       matrix:
         PYTHON: [python3.8, python3.9, python3.10, python3.11, python3.12, python3.13]
+        CC: [gcc, clang, tcc]
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -42,12 +43,14 @@ jobs:
       run: sudo apt update
     - name: Install Python
       run: sudo apt install --yes ${{matrix.PYTHON}}
+    - name: Install compiler
+      run: sudo apt install --yes ${{matrix.CC}}
     - name: Run interpreter tests
       run: ${{matrix.PYTHON}} scrapscript.py test
     - name: Run compiler tests
-      run: ${{matrix.PYTHON}} compiler_tests.py
+      run: CC=${{matrix.CC}} ${{matrix.PYTHON}} compiler_tests.py
     - name: Run compiler tests with static heap
-      run: CFLAGS="-DSTATIC_HEAP" ${{matrix.PYTHON}} compiler_tests.py
+      run: CC=${{matrix.CC}} CFLAGS="-DSTATIC_HEAP" ${{matrix.PYTHON}} compiler_tests.py
   build_docker_image:
     runs-on: ubuntu-latest
     permissions:
