Update package dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ classifiers = [
     "Intended Audience :: Developers",
     "Topic :: Software Development",
     "Programming Language :: Python",
+    "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
@@ -23,10 +24,10 @@ version = "0.1.1"
 python = ">=3.8"
 
 [tool.poetry.group.dev.dependencies]
-mypy = "^1.7.0"
-pylint = "^3.0.1"
-pytest = "^7.4.0"
-ruff = "^0.1.5"
+mypy = "^1.10.0"
+pylint = "^3.2.0"
+pytest = "^8.2.0"
+ruff = "^0.5.0"
 
 [tool.poetry.scripts]
 scrap = "scrapscript:main"
