--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,6 +51,10 @@ jobs:
       run: CC=${{matrix.CC}} ${{matrix.PYTHON}} compiler_tests.py
     - name: Run compiler tests with static heap
       run: CC=${{matrix.CC}} CFLAGS="-DSTATIC_HEAP" ${{matrix.PYTHON}} compiler_tests.py
+    - name: Run compiler tests with ASAN
+      run: CC=${{matrix.CC}} CFLAGS=-fsanitize=address ${{matrix.PYTHON}} compiler_tests.py
+    - name: Run compiler tests with static heap with ASAN
+      run: CC=${{matrix.CC}} CFLAGS="-DSTATIC_HEAP -fsanitize=address" ${{matrix.PYTHON}} compiler_tests.py
   build_docker_image:
     runs-on: ubuntu-latest
     permissions:
