--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,6 +45,8 @@ jobs:
       run: sudo apt install --yes ${{matrix.PYTHON}}
     - name: Install compiler
       run: sudo apt install --yes ${{matrix.CC}}
+    - name: Install Valgrind
+      run: sudo apt install --yes valgrind
     - name: Run interpreter tests
       run: ${{matrix.PYTHON}} scrapscript.py test
     - name: Run compiler tests
@@ -59,6 +61,10 @@ jobs:
       run: CC=${{matrix.CC}} CFLAGS=-fsanitize=undefined ${{matrix.PYTHON}} compiler_tests.py
     - name: Run compiler tests with static heap with UBSAN
       run: CC=${{matrix.CC}} CFLAGS="-DSTATIC_HEAP -fsanitize=undefined" ${{matrix.PYTHON}} compiler_tests.py
+    - name: Run compiler tests with Valgrind
+      run: CC=${{matrix.CC}} USE_VALGRIND=1 ${{matrix.PYTHON}} compiler_tests.py
+    - name: Run compiler tests with static heap with Valgrind
+      run: CC=${{matrix.CC}} CFLAGS="-DSTATIC_HEAP" USE_VALGRIND=1 ${{matrix.PYTHON}} compiler_tests.py
   build_docker_image:
     runs-on: ubuntu-latest
     permissions:
