--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,22 @@ jobs:
     - run: poetry run ruff check scrapscript.py
     - run: poetry run ruff format --check scrapscript.py
     - run: poetry run mypy --strict scrapscript.py
-  run_unit_tests:
+  run_interpreter_unit_tests:
+    strategy:
+      matrix:
+        PYTHON: [python3.8, python3.9, python3.10, python3.11, python3.12, python3.13]
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - name: Get deadsnakes repo
+      run: sudo add-apt-repository --yes ppa:deadsnakes/ppa
+    - name: Update local package lists
+      run: sudo apt update
+    - name: Install Python
+      run: sudo apt install --yes ${{matrix.PYTHON}}
+    - name: Run interpreter tests
+      run: ${{matrix.PYTHON}} scrapscript.py test
+  run_compiler_unit_tests:
     strategy:
       matrix:
         PYTHON: [python3.8, python3.9, python3.10, python3.11, python3.12, python3.13]
@@ -42,14 +57,8 @@ jobs:
       run: sudo add-apt-repository --yes ppa:deadsnakes/ppa
     - name: Update local package lists
       run: sudo apt update
-    - name: Install Python
-      run: sudo apt install --yes ${{matrix.PYTHON}}
-    - name: Install compiler
-      run: sudo apt install --yes ${{matrix.CC}}
-    - name: Install Valgrind
-      run: sudo apt install --yes valgrind
-    - name: Run interpreter tests
-      run: ${{matrix.PYTHON}} scrapscript.py test
+    - name: Install deps
+      run: sudo apt install --yes ${{matrix.PYTHON}} ${{matrix.CC}} valgrind
     - name: Run compiler tests
       run: CC=${{matrix.CC}} CFLAGS="${{matrix.USE_STATIC_HEAP}}" ${{matrix.PYTHON}} compiler_tests.py
     - name: Run compiler tests with ASAN
@@ -89,7 +98,7 @@ jobs:
     if: |
       github.repository == 'tekknolagi/scrapscript' &&
       github.ref == format('refs/heads/{0}', github.event.repository.default_branch)
-    needs: [run_lint, run_unit_tests]
+    needs: [run_lint, run_interpreter_unit_tests, run_compiler_unit_tests]
     steps:
       - uses: actions/checkout@v4
       - uses: superfly/flyctl-actions/setup-flyctl@master
