--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,6 +67,13 @@ jobs:
       run: CC=${{matrix.CC}} CFLAGS="-fsanitize=undefined ${{matrix.USE_STATIC_HEAP}}" ${{matrix.PYTHON}} compiler_tests.py
     - name: Run compiler tests with Valgrind
       run: CC=${{matrix.CC}} CFLAGS="${{matrix.USE_STATIC_HEAP}}" USE_VALGRIND=1 ${{matrix.PYTHON}} compiler_tests.py
+  run_unit_tests:
+    needs: [run_interpreter_unit_tests, run_compiler_unit_tests]
+    # Fake, unnecessary
+    runs-on: ubuntu-latest
+    # Fake, unnecessary
+    steps:
+    - uses: actions/checkout@v4
   build_docker_image:
     runs-on: ubuntu-latest
     permissions:
@@ -98,7 +105,7 @@ jobs:
     if: |
       github.repository == 'tekknolagi/scrapscript' &&
       github.ref == format('refs/heads/{0}', github.event.repository.default_branch)
-    needs: [run_lint, run_interpreter_unit_tests, run_compiler_unit_tests]
+    needs: [run_lint, run_unit_tests]
     steps:
       - uses: actions/checkout@v4
       - uses: superfly/flyctl-actions/setup-flyctl@master
